Add -disableAutomaticPackageResolution to CI build step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,8 @@ jobs:
             -scheme AgentHub \
             -configuration Release \
             -archivePath build/AgentHub.xcarchive \
+            -skipPackagePluginValidation \
+            -disableAutomaticPackageResolution \
             CODE_SIGN_STYLE=Manual \
             CODE_SIGN_IDENTITY="Developer ID Application" \
             DEVELOPMENT_TEAM=${{ secrets.TEAM_ID }} \
